@@ -4,12 +4,11 @@ AUX cdrtools-2.01.01a01-scanbus.patch 776 RMD160 911c74412e4ccf3fb82140dd43d7e2c
 AUX cdrtools-2.01.01a03-warnings.patch 853 RMD160 5ecadc359bfe6d914f2782b7ea8e7b0bb60e5c14 SHA1 35df7d6adeb1380d72c07fecdf65725b7e708fac SHA256 0d2ca432a854792c82ee89fe6a097c6b3c1621e38fcb6d16c7f88658e62a130d
 AUX cdrtools-2.01.01a18-rezero.patch 553 RMD160 93a4a0cdae9df6f76a0c9e6398b10428e456e312 SHA1 379f892582da4d6acf2578c83c81812b7393343f SHA256 306f1a6d70a74dc9f26de5d8da567fb8ff47997ba6d016c47ddc81ec56ce6c62
 AUX mkisofs-iconv-25.patch 17187 RMD160 13108b22cda02e56a68723b7d8527406f17566c8 SHA1 42a39716cd235c184702c9ffde1330fd6e9f4519 SHA256 791c9d39ded40731ecfaf0e4026c4e43fd98629691b04a2ab7b2f26cb10ac56f
-DIST cdrtools-2.01.01a25.tar.bz2 1590924 RMD160 8d55d2b784dc94c58d75cf15bb9be1c90a0f3f2a SHA1 bdec95d5683e22230867fdfa0506df2e73bb6bdc SHA256 f774fac641d9b312563265f0538f018006fb960251bb954a1873361d85fd5e52
 DIST cdrtools-2.01.01a34.tar.bz2 1661093 RMD160 f7336d304ffcb28124d3ee3fd3fc8d6ef7c03895 SHA1 0abb5485f186d9da19677aa31cf1e12ab3a3c4e8 SHA256 409003cdfa8a984d82f3b659ace13d4843f41295102262d67cf9bd578011a309
 DIST cdrtools-2.01.01a36.tar.bz2 1664644 RMD160 12ad5e9cf28d620c97e3aa8523851c2fb10eac00 SHA1 581c608395310c518d01a6fdc3fb88ec7d37e1f3 SHA256 2271ffad792fe01b04a7cc472c3ea6511997a1ba5e6060816faaa0d4ab9b481e
-EBUILD cdrtools-2.01.01_alpha25.ebuild 3381 RMD160 c966251f7b02994b623f7be108e4f0ac70a482a3 SHA1 28e351bc16a90dc229ed3f270b93f7450484025d SHA256 5f742dfc32ad41130471ba57fe26a727d4c474ecfc42f864c951480aa002a140
+DIST cdrtools-2.01.01a37.tar.bz2 1667934 RMD160 d8d7b5e411dbaf371c67179443c1ba6517110ab6 SHA1 c6bbce4959a12c81a5944d7896959077002851b5 SHA256 7b588b7bb7d0c208820dff94458a14974e1e5d6e4cb378243709f86952969007
 EBUILD cdrtools-2.01.01_alpha34.ebuild 3614 RMD160 6b0cf247f0cfa864ba15288f105e7e232d4cb47f SHA1 3a3f80e6e28d5a9d772f46febf39e409c0b2531e SHA256 c233f0abf560ba689ae7cd67537435e4ee275f021149c9333a511998147f07bc
 EBUILD cdrtools-2.01.01_alpha36-r1.ebuild 3649 RMD160 b4ad85f04c36a1377480a68a6692da31cf82c165 SHA1 cb061d940cb6fdd5d7796e3178dfbd2afbaba34e SHA256 d6e9f7a4728533a57c8ce27424bd0cf8cf809a17c7a3fae60c255f729cc14502
-EBUILD cdrtools-2.01.01_alpha36.ebuild 3630 RMD160 00f51496abdc0529910bb7e7314b6df627abc171 SHA1 57021ce98d5cb80ea664162c41c809437f8b5563 SHA256 742740e72c31415a9cd1e1b93298ef7f567b04f6787d0e2801ba74da686ce1cd
-MISC ChangeLog 29784 RMD160 beffc6ba2b5125d3d7565d90470d17ec903ea373 SHA1 cfcb8a18deef81dcb62f84dedceff747aa9d241c SHA256 a959bb57b29867e7a23d8504ec8cd2d13e567f38e34ea72916c7d4817f8683ac
+EBUILD cdrtools-2.01.01_alpha37.ebuild 3644 RMD160 bdd87b6398ae7bc4159b8f66a9c251d37d18b23d SHA1 9557d70f4e021c6cb20ea352f03fb4af4bdda04c SHA256 c0764f32664436e4452bda657cfe6248751921f576171fbc780ec143906930c6
+MISC ChangeLog 30063 RMD160 df5c8d3fa311c7ef32361a5beb6898d0c002468c SHA1 be55296f059a6b6da24e026202622ce6e9aed712 SHA256 caac489e3f5dfff8d67a9615a0a288fcfa438a4b4f70dec576754f977052c179
 MISC metadata.xml 254 RMD160 f274a70fa23d8064efddcce296e0aed3344bd86b SHA1 ab52ea446603ae6242dae41e0c90fcf7ae8f09cf SHA256 21400abf2dad3e5b7b0d2f7f9586c33cba6336b42a97e1f2b3e7e8b9db0daae5
