@@ -1,6 +1,16 @@
 # ChangeLog for app-cdr/cdrtools
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.197 2008/01/25 21:05:40 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.199 2008/01/27 17:16:39 pylon Exp $
+
+  27 Jan 2008; Lars Weiler <pylon@gentoo.org>
+  -cdrtools-2.01.01_alpha25.ebuild:
+  Cleanup.
+
+*cdrtools-2.01.01_alpha37 (27 Jan 2008)
+
+  27 Jan 2008; Lars Weiler <pylon@gentoo.org>
+  -cdrtools-2.01.01_alpha36.ebuild, +cdrtools-2.01.01_alpha37.ebuild:
+  Version bump; bug #205794.
 
   25 Jan 2008; Fabian Groffen <grobian@gentoo.org> cdrtools-2.01-r1.ebuild,
   cdrtools-2.01.01_alpha25.ebuild, cdrtools-2.01.01_alpha34.ebuild,
